--- a/translation/en/sujato/sutta/sn/sn56/sn56.6_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn56/sn56.6_translation-en-sujato.json
@@ -3,7 +3,7 @@
   "sn56.6:0.2": "1. Immersion ",
   "sn56.6:0.3": "Ascetics and Brahmins (2nd) ",
   "sn56.6:1.1": "test",
-  "sn56.6:1.2": "something",
+  "sn56.6:1.2": "This is a test for sn56.6",
   "sn56.6:1.3": "or present—reveal that they are awakened, all of them reveal that they truly awakened to the four noble truths. ",
   "sn56.6:2.1": "What four? ",
   "sn56.6:2.2": "The noble truths of suffering, the origin of suffering, the cessation of suffering, and the practice that leads to the cessation of suffering. … ",
